# java-c-study

./: README.md
c/:  dereference_read.c  1.c  2.c  3.c  4.c  CMakeLists.txt  address_demo.c  array_address.c  array_is_pointer.c  array_is_pointer.cpp  array_pointer_all.c  dereference_write.c  main.c  pointer_arithmetic.c  pointer_basic.c  pointer_flow.c  pointer_mistake.c  pointer_traverse.c  pointer_types.c  string_pointer.c  string_traverse.c
html-tagtable-css/: 9강.html
java/Day1/: .gitignore
java/Day1/src/: ArthmeticDemo.java  BmiCalculator.java  CastingDemo.java  CompareLogicDemo.java  ConstantDemo.java  HelloWorld.java  Hellojava.java  MemoryDemo.java  MemoryDemo2.java  MultiplicationTable7.java  OutputDemo.java  ScannerGotcha.java  SelfIntro.java  TempConverter.java  VariableDemo.java
java/Day2/src/: BreakContinue.java  DiamondChallenge.java  DiamondStarClaudeGlm.java  Factorial.java  Fibonacci.java  FibonacciClaudeGlm.java  FibonacciDiamond.java  FibonacciFor.java  ForLoop.java  GradeProcessor.java  Gugudan.java  IfElseBasic.java  MultiCondition.java  PrimeChecker.java  StarPattern.java  SwitchDemo.java  WhileDemo.java
java/Day2Callenge/promptmd/: 별찍기  별찍기_결과보고서.md  소수판별기_결과보고서.md  피보나치_결과보고서.md
java/Day2Callenge/src/: DiamondStar.java  Fibonacci.java  PrimeChecker.java
java/Day2Cline/: 다이아몬드별찍기_프로젝트_기록glm4.7.md  소수판독기_결과보고서gpt5.3spark.md
java/Day2Cline/src/: DiamondStar.java  (+1 more)
java/Day2cline2/: 다이아몬드_별찍기_결과보고서qwen-35b.md  피보나치_수열_결과보고서qwen-35b.md
java/Day6/: employees.csv  new.txt  old.txt
java/EmployeeManagementSystem/: team.csv  오류수정내역.md
(+99 files in other folders)
